deploy/webapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yas-bot-webapp
  namespace: sailingapp
  labels:
    app: yas-bot-webapp
spec:
  selector:
    app: yas-bot-webapp
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
